[refactor] 통합 콘텐츠 리스트 API 리팩토링